--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ractive-range-slider",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Ractive component for a range slider composed of two native <input type=range> elements.",
   "main": "range-slider.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "browserify": {
     "transform": [
-      ["stringify", {"extensions": ["hbs", "css"] }]
+      ["stringify", {"extensions": [".hbs", ".css"] }]
     ]
   },
   "repository": {
